# meridian-rs

./: .env.example  .gitignore  Cargo.toml  README.md  unused-state.json  user-config.example.json
backend/: .env.example  .gitignore  user-config.example.json
backend/src/: cli.rs  cycle.rs  main.rs  tools.rs  web.rs
backend/src/agent/: loop_.rs  roles.rs
backend/src/config/: loader.rs  types.rs
backend/src/state/: positions.rs
backend/src/tools/: bollinger.rs  dlmm.rs  executor.rs  meteora_native.rs  screening.rs  wallet.rs
docs/: agent-meridian-relay.md  discord-signals.md  pvp-risk.md
src/: agent.rs  cli.rs  config.rs  cycle.rs  hivemind.rs  lessons.rs  llm.rs  main.rs  middleware.ts  models.rs  ops.rs  signal_weights.rs  state.rs  strategy_library.rs  tools.rs  utils.rs  web.rs
src/agent/: loop_.rs  prompt.rs  roles.rs
src/app/api/auth/login/: route.ts
src/components/auth/: LockScreen.tsx
src/components/layout/: ChartGridView.tsx  DashboardLayout.tsx  DashboardView.tsx  TerminalConsole.tsx  Topbar.tsx
src/components/trading/: PortfolioWidget.tsx  PositionTable.tsx
src/components/widgets/: ActivityWidget.tsx  BackendControlWidgets.tsx  CandidateWidget.tsx  ChartWidget.tsx
src/config/: defaults.rs  llm_config.rs  loader.rs  screening_scales.rs  types.rs
src/lib/: auth.ts
src/models/: pool.rs  position.rs  token.rs
src/state/: pool_memory.rs  positions.rs
src/styles/: theme.css
src/tools/: agent_meridian.rs  blacklist.rs  bollinger.rs  chart_indicators.rs  definitions.rs  discord_signals.rs  dlmm.rs  executor.rs  gmgn.rs  meteora_native.rs  screening.rs  smart_wallets.rs  study.rs  telegram.rs  telegram_bot.rs  token.rs  wallet.rs
src/utils/: logger.rs  math.rs  time.rs
(+3 files in other folders)
